fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,7 @@ h2
     text-align: center;
     font-family: 'Comfortaa', cursive;
     margin: 15px 0;
+    margin-top: 50px;
 }
 
 input
